Minor improvements to menu and such.

--- a/example/hello-world.html
+++ b/example/hello-world.html
@@ -46,6 +46,8 @@
     </script>
   </head>
   <body>
+    <h1>Sgvizler MWE</h1>
+    <p>Please allow the page to load for a few seconds.</p>
   <table id="example" style="border: 1px solid brown;"
        data-sgvizler-endpoint="http://dbpedia.org/sparql"
        data-sgvizler-query="SELECT * { ?s ?p ?o, ?o2 } LIMIT 6"
