--- a/example/usage-api.html
+++ b/example/usage-api.html
@@ -16,6 +16,8 @@
     </script>
   </head>
   <body>
+    <h1>Sgvizler MWE</h1>
+    <p>Please allow the page to load for a few seconds.</p>
     <script>
     var Q = new sgvizler.Query();                           // Create a Query instance.
     
