--- a/example/usage-container-drawone.html
+++ b/example/usage-container-drawone.html
@@ -19,6 +19,8 @@
     </script>
   </head>
   <body>
+    <h1>Sgvizler MWE</h1>
+    <p>Please allow the page to load for a few seconds.</p>
   <div id="myExample"
        data-sgvizler-endpoint="http://sws.ifi.uio.no/sparql/npd"
        data-sgvizler-query="SELECT ?class (count(?instance) AS ?noOfInstances)
