--- a/example/usage-query-form.html
+++ b/example/usage-query-form.html
@@ -16,6 +16,8 @@
     </script>
   </head>
   <body>
+    <h1>Sgvizler MWE</h1>
+    <p>Please allow the page to load for a few seconds.</p>
   <div id="myForm"></div>
   <script type="text/javascript">
     $(document).ready(function() { sgvizler.formDraw("myForm"); });
